--- a/photoshare/photoshare/CommunityViewController.xib
+++ b/photoshare/photoshare/CommunityViewController.xib
@@ -27,7 +27,7 @@
                 <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="none" id="COT-tN-cZJ">
                     <rect key="frame" x="20" y="120" width="280" height="353"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="20" minimumInteritemSpacing="5" id="jFZ-ce-rQc">
                         <size key="itemSize" width="90" height="80"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
