--- a/photoshare/photoshare/PhotoGalleryViewController.xib
+++ b/photoshare/photoshare/PhotoGalleryViewController.xib
@@ -62,7 +62,7 @@
                 <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="none" id="cfs-wx-kRA">
                     <rect key="frame" x="0.0" y="96" width="320" height="284"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" id="kVh-ZB-HRu">
                         <size key="itemSize" width="99" height="80"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
