--- a/photoshare/photoshare/SearchPhotoViewController_iPad.xib
+++ b/photoshare/photoshare/SearchPhotoViewController_iPad.xib
@@ -17,7 +17,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <searchBar contentMode="redraw" fixedFrame="YES" placeholder="Search" translatesAutoresizingMaskIntoConstraints="NO" id="fNM-eS-Rk6">
-                    <rect key="frame" x="0.0" y="170" width="768" height="44"/>
+                    <rect key="frame" x="0.0" y="186" width="768" height="44"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <textInputTraits key="textInputTraits"/>
                     <connections>
@@ -25,9 +25,9 @@
                     </connections>
                 </searchBar>
                 <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="pPL-In-LDb">
-                    <rect key="frame" x="0.0" y="214" width="768" height="650"/>
+                    <rect key="frame" x="0.0" y="239" width="768" height="686"/>
                     <autoresizingMask key="autoresizingMask" heightSizable="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="10" id="af8-gu-lqA">
                         <size key="itemSize" width="138" height="170"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
