--- a/photoshare/photoshare/CustomCelliPad.xib
+++ b/photoshare/photoshare/CustomCelliPad.xib
@@ -4,7 +4,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3746"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Custom"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomCelliPad" rowHeight="65" id="Mha-vi-cvP" customClass="CustomCelliPad">
             <rect key="frame" x="0.0" y="0.0" width="768" height="140"/>
