--- a/photoshare/photoshare/AccountViewController.xib
+++ b/photoshare/photoshare/AccountViewController.xib
@@ -16,8 +16,8 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backimg.png" id="vhB-gt-nNR">
-                    <rect key="frame" x="0.0" y="63" width="320" height="568"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="homePageimg.jpeg" id="vhB-gt-nNR">
+                    <rect key="frame" x="0.0" y="63" width="320" height="475"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES"/>
                 </imageView>
                 <imageView userInteractionEnabled="NO" alpha="0.94999999999999996" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg.png" id="FRq-g5-QWy">
@@ -138,8 +138,8 @@
     </objects>
     <resources>
         <image name="arrow.png" width="15" height="23"/>
-        <image name="backimg.png" width="320" height="455"/>
         <image name="bg.png" width="320" height="237"/>
+        <image name="homePageimg.jpeg" width="1600" height="1101"/>
         <image name="line.png" width="287" height="2"/>
     </resources>
 </document>
