--- a/photoshare/photoshare/AccountViewController_iPad.xib
+++ b/photoshare/photoshare/AccountViewController_iPad.xib
@@ -16,7 +16,7 @@
             <rect key="frame" x="0.0" y="0.0" width="768" height="1004"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backimg.png" id="4EA-qA-iG3">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="homePageimg.jpeg" id="4EA-qA-iG3">
                     <rect key="frame" x="2" y="132" width="768" height="830"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 </imageView>
@@ -142,8 +142,8 @@
     </objects>
     <resources>
         <image name="arrow.png" width="15" height="23"/>
-        <image name="backimg.png" width="320" height="455"/>
         <image name="bg.png" width="320" height="237"/>
+        <image name="homePageimg.jpeg" width="1600" height="1101"/>
         <image name="line.png" width="287" height="2"/>
     </resources>
 </document>
